# JCompyle

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  run.py
.github/workflows/: build_and_publish.yml
JCompile/: compiler.py
example/: context.json  result.json  template.json
