[tool.poetry]
name = "jcompyle"
version = "0.1.0"
description = "simple json compiler"
authors = ["amir <amir.daaee@gmail.com>"]
packages = [
    { include = "JCompile" },
]
include = ["run.py"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
jcompyle = "run:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
